css/style.css
/* Overview CSS */
.body{
  color:#FEF8F6;
  max-width: 1500px;
}

.overview{
  width: 75%;
  height: 300px;
  margin-top: 60px;
  margin-left: auto;
  margin-right: auto;
}

.maintitle{
  color:#FFA63D;
  text-align: center;
}

.subtitle{
  color:#2B2D37;
  text-align: center;
}

.mainparagraph{
  color:#2B2D37;
  text-align: center;
  width: 60%;
  margin-left: auto;
  margin-right: auto;
}

/* Data Viz CSS */
.container {
  width: 1400px;
  /* width: 890px;*/
}

#graphic {
  padding-top: 60px;
}


#sections {
  position: relative;
  display: inline-block;
  width: 250px;
  top: 0px;
  z-index: 90;
  padding-bottom: 200px;
}

.step {
  margin-bottom: 200px;
  font-family: "TiemposTextWeb-Regular","Georgia";
  font-size: 16px;
  line-height: 23px;
  color: #767678;
}

#sections .title {
  font-family: Arial,Helvetica,"san-serif";
  font-size: 16px;
  font-weight: bold;
  margin-bottom: 2px;
  color: #262626;
  line-height: 1.2em;
}

#extra-space {
  height: 300px;
}

#vis {
  display: inline-block;
  position: fixed;
  top: 275px;
  /* top: 60px;*/
  top: 60px; 
  z-index: 1;
  /* margin-left: 0; */
  margin-left: 110;
  /* height: 600px; */
  /* width: 600px; */
  /* background-color: #ddd; */
}

#vis .title {
  font-size:120px;
  text-anchor: middle;
}

#vis .sub-title {
  font-size:80px;
  text-anchor: middle;
}

.axis path,
.axis line {
  fill: none;
  stroke: #666;
  shape-rendering: crispEdges;
}

.highlight {
  fill: #008080;
  font-weight: bold;
}

.cough-arrow {
  stroke: #000;
  stroke-width: 4px;

}

